--- a/Graph/DepthFirstSearch.ipynb
+++ b/Graph/DepthFirstSearch.ipynb
@@ -51,9 +51,9 @@
     "        for nex in G[pos]:\n",
     "            # 未探索ならさらに探索\n",
     "            if not visited[nex]:\n",
-    "                r=dfs(nex)\n",
+    "                dfs(nex)\n",
     "        return\n",
-    "    r0=dfs(s)"
+    "    dfs(s)"
    ]
   },
   {
@@ -225,7 +225,7 @@
    "source": [
     "N=5\n",
     "M=4\n",
-    "E=[[1,2],[2,3],[3,4],[3,5]]\n",
+    "E=[[1,2],[2,3],[3,4],[3,5]] # 辺リスト\n",
     "G=setG(E) # 隣接リスト\n",
     "\n",
     "dfs_rec(N, G, 1)"
