--- a/Graph/DepthFirstSearch.ipynb
+++ b/Graph/DepthFirstSearch.ipynb
@@ -21,8 +21,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "26b087d6-7244-4fe1-b72a-7e97ff70b983",
+   "metadata": {},
+   "source": [
+    "## 計算量\n",
+    "O(|V|+|E|)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7aafeec5-a821-4f42-9ef8-0d2c18e0363e",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
