--- a/Search/BinarySearch.ipynb
+++ b/Search/BinarySearch.ipynb
@@ -12,6 +12,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "af0ea3e7-77d7-47c5-92c4-c624457aaf24",
+   "metadata": {},
+   "source": [
+    "## 計算量\n",
+    "O(log N)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7aafeec5-a821-4f42-9ef8-0d2c18e0363e",
    "metadata": {
     "tags": []
