--- a/Graph/BreadthFirstSearch.ipynb
+++ b/Graph/BreadthFirstSearch.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# 深さ優先探索(Depth First Search, DFS)"
+    "# 幅優先探索(Breadth First Search, BFS)"
    ]
   },
   {
@@ -16,7 +16,7 @@
    "metadata": {},
    "source": [
     ">https://manabitimes.jp/math/1247<br>\n",
-    ">とにかく行けるとこまで行ってそれ以上進めなくなったら一歩戻ってまた探索するという方法"
+    ">出発点に近い点から順に探索するという方法"
    ]
   },
   {
@@ -35,7 +35,7 @@
     "tags": []
    },
    "source": [
-    "## 実装（再帰関数）"
+    "## 実装"
    ]
   },
   {
@@ -45,24 +45,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "# 再帰呼び出しの深さの上限を 1<<20 に設定\n",
-    "sys.setrecursionlimit(1<<20)\n",
+    "from collections import deque\n",
     "\n",
     "# N: 頂点数, G: 隣接リスト, s: スタート地点\n",
-    "def dfs_rec(N: int, G: list, s: int):\n",
-    "    # visited: 探索済みフラグ\n",
-    "    visited=[False]*(N+1)\n",
-    "    # pos: 現在地点\n",
-    "    def dfs(pos):\n",
-    "        visited[pos]=True\n",
-    "        # nex: 隣接頂点\n",
+    "def bfs(N: int, G: list, s: int):\n",
+    "    INF=-1\n",
+    "    # 各頂点の距離を格納\n",
+    "    dist=[INF]*(N+1)\n",
+    "    dist[s]=0\n",
+    "    # キューを初期化\n",
+    "    q=deque()\n",
+    "    q.append(s)\n",
+    "\n",
+    "    while q:\n",
+    "        # キューから探索用の頂点を取り出す\n",
+    "        pos=q.popleft()\n",
     "        for nex in G[pos]:\n",
-    "            # 未探索ならさらに探索\n",
-    "            if not visited[nex]:\n",
-    "                dfs(nex)\n",
-    "        return\n",
-    "    dfs(s)"
+    "            # 未探索なら距離を確定し、探索用のキューに入れる\n",
+    "            if dist[nex]!=INF: continue\n",
+    "            dist[nex]=dist[pos]+1\n",
+    "            q.append(nex)\n",
+    "    return"
    ]
   },
   {
@@ -72,7 +75,7 @@
     "tags": []
    },
    "source": [
-    "## [使用例 1](https://atcoder.jp/contests/tessoku-book/tasks/math_and_algorithm_am)"
+    "## [使用例 1](https://atcoder.jp/contests/tessoku-book/tasks/math_and_algorithm_an)"
    ]
   },
   {
@@ -80,7 +83,7 @@
    "id": "f18ece8e-b742-4bbf-b52e-2da5856a0e9b",
    "metadata": {},
    "source": [
-    "頂点数 N、辺数 M のグラフについて、連結グラフかどうかを判定する。"
+    "頂点数 N、辺数 M のグラフについて、頂点 1 から各頂点 k までの辺の本数を出力する。(移動不可能な場合は −1 を出力)"
    ]
   },
   {
@@ -90,19 +93,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.setrecursionlimit(1<<20)\n",
+    "from collections import deque\n",
     "\n",
-    "def dfs_rec(N, G, s): \n",
-    "    visited=[False]*(N+1)\n",
-    "    def dfs(pos):\n",
-    "        visited[pos]=True\n",
+    "def bfs(N: int, G: list, s: int):\n",
+    "    INF=-1\n",
+    "    dist=[INF]*(N+1)\n",
+    "    dist[s]=0\n",
+    "    q=deque()\n",
+    "    q.append(s)\n",
+    "    while q:\n",
+    "        pos=q.popleft()\n",
     "        for nex in G[pos]:\n",
-    "            if not visited[nex]:\n",
-    "                dfs(nex)\n",
-    "        return\n",
-    "    dfs(s)\n",
-    "    return visited\n",
+    "            if dist[nex]!=INF: continue\n",
+    "            dist[nex]=dist[pos]+1\n",
+    "            q.append(nex)\n",
+    "    return dist\n",
     "\n",
     "def setG(E):\n",
     "    G=[list() for _ in range(N+1)]\n",
@@ -121,7 +126,7 @@
     {
      "data": {
       "text/plain": [
-       "[True, True, True]"
+       "[0, 2, 1]"
       ]
      },
      "execution_count": 3,
@@ -135,8 +140,7 @@
     "E=[[1,3],[2,3]] # 辺リスト\n",
     "G=setG(E) # 隣接リスト\n",
     "\n",
-    "# 探索済みフラグが全て True のため連結グラフ\n",
-    "dfs_rec(N, G, 1)[1:]"
+    "bfs(N, G, 1)[1:]"
    ]
   },
   {
@@ -148,7 +152,7 @@
     {
      "data": {
       "text/plain": [
-       "[True, True, True, True, False, False]"
+       "[0, 1, 2, 1, -1, -1]"
       ]
      },
      "execution_count": 4,
@@ -161,17 +165,18 @@
     "M=6\n",
     "E=[[1,4],[2,3],[3,4],[5,6],[1,2],[2,4]]\n",
     "G=setG(E)\n",
-    "    \n",
-    "# 探索済みフラグに False が一つでもあれば連結ではない\n",
-    "dfs_rec(N, G, 1)[1:]"
+    "\n",
+    "bfs(N, G, 1)[1:]"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "04024365-057b-4228-93de-a443179cf9f8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## [使用例 2](https://atcoder.jp/contests/tessoku-book/tasks/tessoku_book_ei)"
+    "## [使用例 2](https://atcoder.jp/contests/tessoku-book/tasks/abc007_3)"
    ]
   },
   {
@@ -179,7 +184,7 @@
    "id": "d1da456b-dfc9-4018-9f2d-29a1d4caf382",
    "metadata": {},
    "source": [
-    "頂点数 N、辺数 M の連結なグラフについて、頂点 1 から頂点 N までの単純パスを一つ出力する。"
+    "迷路を解くのに必要な最小移動手数を求める。"
    ]
   },
   {
@@ -189,32 +194,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.setrecursionlimit(1<<20)\n",
+    "from collections import deque\n",
     "\n",
-    "def dfs_rec(N, G, s):\n",
-    "    visited=[False]*(N+1)\n",
-    "    path=[]\n",
-    "    def dfs(pos):\n",
-    "        visited[pos]=True\n",
-    "        path.append(pos)\n",
-    "        if pos==N:\n",
-    "            print(*path)\n",
-    "            exit(0)\n",
-    "        for nex in G[pos]:\n",
-    "            if not visited[nex]:\n",
-    "                dfs(nex)\n",
-    "        path.pop()\n",
-    "        return\n",
-    "    dfs(s)\n",
-    "    return\n",
+    "def nex(R,C,pos_y,pos_x):\n",
+    "    R-=1\n",
+    "    C-=1\n",
+    "    _nex=[]\n",
+    "    if pos_y-1>=0 and xy[pos_y][pos_x]==\".\":\n",
+    "        _nex.append([pos_y-1,pos_x])\n",
+    "    if pos_y+1<=R and xy[pos_y][pos_x]==\".\":\n",
+    "        _nex.append([pos_y+1,pos_x])\n",
+    "    if pos_x-1>=0 and xy[pos_y][pos_x]==\".\":\n",
+    "        _nex.append([pos_y,pos_x-1])\n",
+    "    if pos_x+1<=C and xy[pos_y][pos_x]==\".\":\n",
+    "        _nex.append([pos_y,pos_x+1])    \n",
+    "    return _nex\n",
     "\n",
-    "def setG(E):\n",
-    "    G=[list() for _ in range(N+1)]\n",
-    "    for a,b in E:\n",
-    "        G[a].append(b)\n",
-    "        G[b].append(a)\n",
-    "    return G"
+    "def bfs(R,C,Sy,Sx,Gy,Gx,xy):\n",
+    "    Sy-=1\n",
+    "    Sx-=1\n",
+    "    Gy-=1\n",
+    "    Gx-=1\n",
+    "    INF=-1\n",
+    "    dist=[[INF]*C for _ in range(R)]\n",
+    "    dist[Sy][Sx]=0\n",
+    "    q=deque()\n",
+    "    q.append([Sy,Sx])\n",
+    "    \n",
+    "    while q:\n",
+    "        pos_y,pos_x=q.popleft()\n",
+    "        g=nex(R,C,pos_y,pos_x)\n",
+    "        for nex_y,nex_x in g:\n",
+    "            if dist[nex_y][nex_x]!=INF: continue\n",
+    "            dist[nex_y][nex_x]=dist[pos_y][pos_x]+1\n",
+    "            q.append([nex_y,nex_x])\n",
+    "    return dist[Gy][Gx]"
    ]
   },
   {
@@ -224,20 +238,28 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 2 3 5\n"
-     ]
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "N=5\n",
-    "M=4\n",
-    "E=[[1,2],[2,3],[3,4],[3,5]] # 辺リスト\n",
-    "G=setG(E) # 隣接リスト\n",
+    "R,C=5,8 # R: 行数, C:列数\n",
+    "Sy,Sx=2,2 # スタートの座標\n",
+    "Gy,Gx=2,4 # ゴールの座標\n",
+    "# xy: 迷路, '#': 壁, '.': 道\n",
+    "xy= [['#', '#', '#', '#', '#', '#', '#', '#'],\n",
+    "     ['#', '.', '#', '.', '.', '.', '.', '#'],\n",
+    "     ['#', '.', '#', '#', '#', '.', '.', '#'],\n",
+    "     ['#', '.', '.', '.', '.', '.', '.', '#'],\n",
+    "     ['#', '#', '#', '#', '#', '#', '#', '#']]\n",
     "\n",
-    "dfs_rec(N, G, 1)"
+    "bfs(R,C,Sy,Sx,Gy,Gx,xy)"
    ]
   },
   {
