--- a/Graph/BreadthFirstSearch.ipynb
+++ b/Graph/BreadthFirstSearch.ipynb
@@ -15,6 +15,7 @@
    "id": "c98e8416-f616-4df8-b0d4-e3eef59fe209",
    "metadata": {},
    "source": [
+    "単一始点最短経路問題を解ける。\n",
     ">https://manabitimes.jp/math/1247<br>\n",
     ">出発点に近い点から順に探索するという方法"
    ]
@@ -54,17 +55,17 @@
     "    dist=[INF]*(N+1)\n",
     "    dist[s]=0\n",
     "    # キューを初期化\n",
-    "    q=deque()\n",
-    "    q.append(s)\n",
+    "    que=deque()\n",
+    "    que.append(s)\n",
     "\n",
-    "    while q:\n",
+    "    while que:\n",
     "        # キューから探索用の頂点を取り出す\n",
-    "        pos=q.popleft()\n",
+    "        pos=que.popleft()\n",
     "        for nex in G[pos]:\n",
     "            # 未探索なら距離を確定し、探索用のキューに入れる\n",
     "            if dist[nex]!=INF: continue\n",
     "            dist[nex]=dist[pos]+1\n",
-    "            q.append(nex)\n",
+    "            que.append(nex)\n",
     "    return"
    ]
   },
@@ -99,17 +100,17 @@
     "    INF=-1\n",
     "    dist=[INF]*(N+1)\n",
     "    dist[s]=0\n",
-    "    q=deque()\n",
-    "    q.append(s)\n",
-    "    while q:\n",
-    "        pos=q.popleft()\n",
+    "    que=deque()\n",
+    "    que.append(s)\n",
+    "    while que:\n",
+    "        pos=que.popleft()\n",
     "        for nex in G[pos]:\n",
     "            if dist[nex]!=INF: continue\n",
     "            dist[nex]=dist[pos]+1\n",
-    "            q.append(nex)\n",
+    "            que.append(nex)\n",
     "    return dist\n",
     "\n",
-    "def setG(E):\n",
+    "def setG(N,E):\n",
     "    G=[list() for _ in range(N+1)]\n",
     "    for a,b in E:\n",
     "        G[a].append(b)\n",
@@ -138,7 +139,7 @@
     "N=3\n",
     "M=2\n",
     "E=[[1,3],[2,3]] # 辺リスト\n",
-    "G=setG(E) # 隣接リスト\n",
+    "G=setG(N,E) # 隣接リスト\n",
     "\n",
     "bfs(N, G, 1)[1:]"
    ]
@@ -164,7 +165,7 @@
     "N=6\n",
     "M=6\n",
     "E=[[1,4],[2,3],[3,4],[5,6],[1,2],[2,4]]\n",
-    "G=setG(E)\n",
+    "G=setG(N,E)\n",
     "\n",
     "bfs(N, G, 1)[1:]"
    ]
@@ -218,16 +219,16 @@
     "    INF=-1\n",
     "    dist=[[INF]*C for _ in range(R)]\n",
     "    dist[Sy][Sx]=0\n",
-    "    q=deque()\n",
-    "    q.append([Sy,Sx])\n",
+    "    que=deque()\n",
+    "    que.append([Sy,Sx])\n",
     "    \n",
-    "    while q:\n",
-    "        pos_y,pos_x=q.popleft()\n",
+    "    while que:\n",
+    "        pos_y,pos_x=que.popleft()\n",
     "        g=nex(R,C,pos_y,pos_x)\n",
     "        for nex_y,nex_x in g:\n",
     "            if dist[nex_y][nex_x]!=INF: continue\n",
     "            dist[nex_y][nex_x]=dist[pos_y][pos_x]+1\n",
-    "            q.append([nex_y,nex_x])\n",
+    "            que.append([nex_y,nex_x])\n",
     "    return dist[Gy][Gx]"
    ]
   },
