--- a/Graph/DepthFirstSearch.ipynb
+++ b/Graph/DepthFirstSearch.ipynb
@@ -15,6 +15,7 @@
    "id": "c98e8416-f616-4df8-b0d4-e3eef59fe209",
    "metadata": {},
    "source": [
+    "グラフを探索できる。\n",
     ">https://manabitimes.jp/math/1247<br>\n",
     ">とにかく行けるとこまで行ってそれ以上進めなくなったら一歩戻ってまた探索するという方法"
    ]
@@ -104,7 +105,7 @@
     "    dfs(s)\n",
     "    return visited\n",
     "\n",
-    "def setG(E):\n",
+    "def setG(N,E):\n",
     "    G=[list() for _ in range(N+1)]\n",
     "    for a,b in E:\n",
     "        G[a].append(b)\n",
@@ -133,7 +134,7 @@
     "N=3\n",
     "M=2\n",
     "E=[[1,3],[2,3]] # 辺リスト\n",
-    "G=setG(E) # 隣接リスト\n",
+    "G=setG(N,E) # 隣接リスト\n",
     "\n",
     "# 探索済みフラグが全て True のため連結グラフ\n",
     "dfs_rec(N, G, 1)[1:]"
@@ -160,7 +161,7 @@
     "N=6\n",
     "M=6\n",
     "E=[[1,4],[2,3],[3,4],[5,6],[1,2],[2,4]]\n",
-    "G=setG(E)\n",
+    "G=setG(N,E)\n",
     "    \n",
     "# 探索済みフラグに False が一つでもあれば連結ではない\n",
     "dfs_rec(N, G, 1)[1:]"
@@ -209,7 +210,7 @@
     "    dfs(s)\n",
     "    return\n",
     "\n",
-    "def setG(E):\n",
+    "def setG(N,E):\n",
     "    G=[list() for _ in range(N+1)]\n",
     "    for a,b in E:\n",
     "        G[a].append(b)\n",
@@ -235,7 +236,7 @@
     "N=5\n",
     "M=4\n",
     "E=[[1,2],[2,3],[3,4],[3,5]] # 辺リスト\n",
-    "G=setG(E) # 隣接リスト\n",
+    "G=setG(N,E) # 隣接リスト\n",
     "\n",
     "dfs_rec(N, G, 1)"
    ]
