--- a/Graph/test.ipynb
+++ b/Graph/test.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a30c406c08974c569d9e28ac6c973c66",
+       "model_id": "fda102c796124173bf467646e656c5db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "N,M=map(int,input().split())\n",
-    "ABC=[list(map(int,input().split())) for _ in range(M)]\n"
+    "ABC=[list(map(int,input().split())) for _ in range(M)]"
    ]
   },
   {
@@ -78,13 +78,15 @@
     {
      "data": {
       "text/plain": [
-       "[[1, 2, 15],\n",
-       " [1, 4, 20],\n",
-       " [2, 3, 65],\n",
-       " [2, 5, 4],\n",
-       " [3, 6, 50],\n",
-       " [4, 5, 30],\n",
-       " [5, 6, 8]]"
+       "[[1, 2, 12],\n",
+       " [1, 3, 10],\n",
+       " [2, 6, 160],\n",
+       " [2, 7, 15],\n",
+       " [3, 4, 1],\n",
+       " [3, 5, 4],\n",
+       " [4, 5, 3],\n",
+       " [4, 6, 120],\n",
+       " [6, 7, 14]]"
       ]
      },
      "execution_count": 3,
