--- a/Graph/BreadthFirstSearch.ipynb
+++ b/Graph/BreadthFirstSearch.ipynb
@@ -197,17 +197,17 @@
    "source": [
     "from collections import deque\n",
     "\n",
-    "def nex(R,C,pos_y,pos_x):\n",
+    "def nex(R,C,pos_y,pos_x,xy):\n",
     "    R -= 1\n",
     "    C -= 1\n",
     "    _nex = []\n",
-    "    if pos_y-1 >= 0 and xy[pos_y][pos_x] == \".\":\n",
+    "    if pos_y-1 >= 0 and xy[pos_y-1][pos_x] == \".\":\n",
     "        _nex.append([pos_y-1,pos_x])\n",
-    "    if pos_y+1 <= R and xy[pos_y][pos_x] == \".\":\n",
+    "    if pos_y+1 <= R and xy[pos_y+1][pos_x] == \".\":\n",
     "        _nex.append([pos_y+1,pos_x])\n",
-    "    if pos_x-1 >= 0 and xy[pos_y][pos_x] == \".\":\n",
+    "    if pos_x-1 >= 0 and xy[pos_y][pos_x-1] == \".\":\n",
     "        _nex.append([pos_y,pos_x-1])\n",
-    "    if pos_x+1 <= C and xy[pos_y][pos_x] == \".\":\n",
+    "    if pos_x+1 <= C and xy[pos_y][pos_x+1] == \".\":\n",
     "        _nex.append([pos_y,pos_x+1])    \n",
     "    return _nex\n",
     "\n",
@@ -224,7 +224,7 @@
     "    \n",
     "    while que:\n",
     "        pos_y,pos_x = que.popleft()\n",
-    "        g = nex(R,C,pos_y,pos_x)\n",
+    "        g = nex(R,C,pos_y,pos_x,xy)\n",
     "        for nex_y,nex_x in g:\n",
     "            if dist[nex_y][nex_x] != INF: continue\n",
     "            dist[nex_y][nex_x] = dist[pos_y][pos_x]+1\n",
