--- a/Graph/FordFulkerson.ipynb
+++ b/Graph/FordFulkerson.ipynb
@@ -16,7 +16,8 @@
    "metadata": {},
    "source": [
     "最大フロー問題を解ける。<br>\n",
-    "重み付きグラフ G(V, E) に対して、流入点 s から流出点 t までの総流量を最大化する問題。"
+    "重み付きグラフ G(V, E) に対して、流入点 s から流出点 t までの総流量を最大化する問題。\n",
+    "> https://www.momoyama-usagi.com/entry/math-risan15#i-6"
    ]
   },
   {
@@ -168,17 +169,98 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e6ac58f-2bab-49aa-93fc-27a0417ded5d",
+   "cell_type": "markdown",
+   "id": "dc8a426e-2b3d-450d-8988-ccf6f8380de9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## [使用例 2](https://atcoder.jp/contests/tessoku-book/tasks/tessoku_book_eo)\n",
+    "燃やす埋める問題\n",
+    "駅 1 から N について、特急駅に指定した場合の利益を最大化する。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9c00b4b9-33af-4a83-b165-084a6ba4a0cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N,M=5,2\n",
+    "P=[3,4,-1,-5,5]\n",
+    "AB=[[1,3],[2,4]]\n",
+    "INF=10**15\n",
+    "\n",
+    "S = N\n",
+    "T = N + 1\n",
+    "offset = 0\n",
+    "# 重み付き辺リスト\n",
+    "E=[]\n",
+    "# スタートから各頂点、各頂点からゴールへのパスを通す\n",
+    "for i in range(N):\n",
+    "    if P[i]>=0:\n",
+    "        # 特急駅にしない場合のコスト\n",
+    "        offset += P[i]\n",
+    "        E.append([S,i,P[i]])\n",
+    "    else:\n",
+    "        # 特急駅にする場合のコスト\n",
+    "        E.append([i,T,P[i]*(-1)])\n",
+    "\n",
+    "for a,b in AB:\n",
+    "    E.append([a-1,b-1,INF])\n",
+    "\n",
+    "ff=FordFulkerson(T)\n",
+    "for u,v,c in E:\n",
+    "    ff.add_edge(u, v, c)\n",
+    "\n",
+    "ans=offset-ff.maxflow(S, T)\n",
+    "ans"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb5a10a8-70d5-4b28-b4a2-bb58f56fb71e",
+   "metadata": {},
+   "source": [
+    "題意の通り利益を置くと負数の取り扱いが問題になる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10a6c621-7cf3-4c1d-bece-8ba84dd98c6a",
+   "metadata": {},
+   "source": [
+    "全て良い方の選択肢を選び、そこからの差分をコストと見なす。<br>\n",
+    "コストを最小化する最小カット問題を解く。<br>\n",
+    "> 最小カットは、辺のコストを容量と見て s → t 間の最大流と一致するという定理があるので、最大流問題として求められる。\n",
+    "> https://ikatakos.com/pot/programming_algorithm/graph_theory/maximum_flow/burn_bury_problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4847ec97-e230-470e-b5f4-220f50760893",
+   "metadata": {},
+   "source": [
+    "|                               |  1   |  2   |  3   |  4   |  5   |\n",
+    "| ----                          | ---- | ---- | ---- | ---- | ---- |\n",
+    "| s: 特急駅にしない場合のコスト  |  3   |  4   |  0   |  0   |  5   |\n",
+    "| t: 特急駅にする場合のコスト    |  0   |  0   |  1   |  5   |  0   |\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "045d8430-fd89-4819-a47e-bb3972e9cdea",
+   "id": "30614f32-2327-46fe-b903-a11e9a22c96f",
    "metadata": {},
    "outputs": [],
    "source": []
