--- a/Graph/FordFulkerson.ipynb
+++ b/Graph/FordFulkerson.ipynb
@@ -169,18 +169,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfabbc0f-5315-41a3-b466-d6a9cd781aa5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "dc8a426e-2b3d-450d-8988-ccf6f8380de9",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## [使用例 2](https://atcoder.jp/contests/tessoku-book/tasks/tessoku_book_eo)\n",
-    "燃やす埋める問題\n",
+    "## [使用例 2 (燃やす埋める問題)](https://atcoder.jp/contests/tessoku-book/tasks/tessoku_book_eo)\n",
     "駅 1 から N について、特急駅に指定した場合の利益を最大化する。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9c00b4b9-33af-4a83-b165-084a6ba4a0cd",
    "metadata": {},
    "outputs": [
@@ -190,7 +199,7 @@
        "7"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,6 +270,70 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "30614f32-2327-46fe-b903-a11e9a22c96f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8169238-3077-4e48-9c1d-e10dd7f89607",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## [使用例 3 (二部マッチング)](https://atcoder.jp/contests/tessoku-book/tasks/tessoku_book_bq)\n",
+    "マッチングの最大本数は、各辺の容量が 1　の最大フローを求める問題と一致。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a5870cc0-908c-4af5-bab8-23e88dc6e6eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N = 5\n",
+    "C = [['#', '.', '.', '.', '.'],\n",
+    "     ['#', '.', '#', '.', '.'],\n",
+    "     ['.', '.', '.', '.', '#'],\n",
+    "     ['.', '.', '.', '.', '#'],\n",
+    "     ['.', '.', '.', '#', '#']]\n",
+    "\n",
+    "S=2*N\n",
+    "T=2*N+1\n",
+    "w=1\n",
+    "E=[]\n",
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        if C[i][j]==\"#\":\n",
+    "            E.append([i,N+j,w])\n",
+    "\n",
+    "for i in range(N):\n",
+    "    E.append([S,i,w])\n",
+    "    E.append([N+i,T,w])\n",
+    "    \n",
+    "ff=FordFulkerson(T)\n",
+    "for u,v,c in E:\n",
+    "    ff.add_edge(u, v, c)\n",
+    "\n",
+    "ff.maxflow(S, T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b7dbb97-ebb8-492f-a1aa-2b391dd17eb4",
    "metadata": {},
    "outputs": [],
    "source": []
