--- a/String/Zalgorithm.ipynb
+++ b/String/Zalgorithm.ipynb
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "# 最長共通接頭辞の長さのリストを返す\n",
-    "def z_algo(S):\n",
+    "def z_algo(S: str):\n",
     "    N = len(S)\n",
     "    # i: 探索開始位置\n",
     "    i = 1\n",
