--- a/DP/LongestIncreasingSubsequence.ipynb
+++ b/DP/LongestIncreasingSubsequence.ipynb
@@ -5,6 +5,14 @@
    "id": "c98e8416-f616-4df8-b0d4-e3eef59fe209",
    "metadata": {},
    "source": [
+    "# 最長増加部分列(Longest Increasing Subsequence, LIS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1167e69d-5724-429c-9928-32c23f2f1140",
+   "metadata": {},
+   "source": [
     "数列の部分列のうち、すべての i < j で a[i] < a[j] となっている部分列を増加部分列という。そのうち最長のものを最長増加部分列という。"
    ]
   },
