--- a/DP/Doubling.ipynb
+++ b/DP/Doubling.ipynb
@@ -37,7 +37,6 @@
    "cell_type": "markdown",
    "id": "7aafeec5-a821-4f42-9ef8-0d2c18e0363e",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -51,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "44d389c5-2299-47d2-8437-8ba074b378c5",
    "metadata": {},
    "outputs": [],
@@ -59,13 +58,13 @@
     "# 最大 2^(33) 遷移する \n",
     "K = 33 \n",
     "\n",
-    "# N: 要素数、A: 初回の遷移先インデックス\n",
+    "# N: 要素数、A: 初回の遷移先\n",
     "def doubling(N: int,A: list) -> list:\n",
     "    # DP 初期化\n",
-    "    dp = [[0]*N for _ in range(K+1)]\n",
+    "    dp = [[0]*(N+1) for _ in range(K+1)]\n",
     "    dp[0] = A\n",
     "    for i in range(1,K+1):\n",
-    "        for j in range(N):\n",
+    "        for j in range(N+1):\n",
     "            dp[i][j]=dp[i-1][dp[i-1][j]]\n",
     "    \n",
     "    return dp\n",
@@ -102,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "56c0771e-738f-467d-a039-15ed5ce84aa9",
    "metadata": {},
    "outputs": [
@@ -122,75 +121,47 @@
     "A=[2, 4, 1, 7, 6, 5, 3]\n",
     "Queries=[[1, 1], [1, 5], [2, 13], [5, 999999999]]\n",
     "\n",
-    "# インデックスに変換\n",
-    "A = [a-1 for a in A]\n",
+    "# インデックス 0 を埋める\n",
+    "A = [0] + A\n",
     "dp = doubling(N, A)\n",
     "for q,k in Queries:\n",
-    "    # インデックスに変換\n",
-    "    q-=1\n",
     "    ans = query(dp, q, k)\n",
-    "    # インデクス → 答えに変換\n",
-    "    print(ans+1)"
+    "    print(ans)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "b94dd3c6-9eef-4ab1-8021-dfa9f521f9ef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[1, 3, 0, 6, 5, 4, 2],\n",
-       " [3, 6, 1, 2, 4, 5, 0],\n",
-       " [2, 0, 6, 1, 4, 5, 3],\n",
-       " [6, 2, 3, 0, 4, 5, 1],\n",
-       " [1, 3, 0, 6, 4, 5, 2],\n",
-       " [3, 6, 1, 2, 4, 5, 0],\n",
-       " [2, 0, 6, 1, 4, 5, 3],\n",
-       " [6, 2, 3, 0, 4, 5, 1],\n",
-       " [1, 3, 0, 6, 4, 5, 2],\n",
-       " [3, 6, 1, 2, 4, 5, 0],\n",
-       " [2, 0, 6, 1, 4, 5, 3],\n",
-       " [6, 2, 3, 0, 4, 5, 1],\n",
-       " [1, 3, 0, 6, 4, 5, 2],\n",
-       " [3, 6, 1, 2, 4, 5, 0],\n",
-       " [2, 0, 6, 1, 4, 5, 3],\n",
-       " [6, 2, 3, 0, 4, 5, 1],\n",
-       " [1, 3, 0, 6, 4, 5, 2],\n",
-       " [3, 6, 1, 2, 4, 5, 0],\n",
-       " [2, 0, 6, 1, 4, 5, 3],\n",
-       " [6, 2, 3, 0, 4, 5, 1],\n",
-       " [1, 3, 0, 6, 4, 5, 2],\n",
-       " [3, 6, 1, 2, 4, 5, 0],\n",
-       " [2, 0, 6, 1, 4, 5, 3],\n",
-       " [6, 2, 3, 0, 4, 5, 1],\n",
-       " [1, 3, 0, 6, 4, 5, 2],\n",
-       " [3, 6, 1, 2, 4, 5, 0],\n",
-       " [2, 0, 6, 1, 4, 5, 3],\n",
-       " [6, 2, 3, 0, 4, 5, 1],\n",
-       " [1, 3, 0, 6, 4, 5, 2],\n",
-       " [3, 6, 1, 2, 4, 5, 0],\n",
-       " [2, 0, 6, 1, 4, 5, 3],\n",
-       " [6, 2, 3, 0, 4, 5, 1],\n",
-       " [1, 3, 0, 6, 4, 5, 2],\n",
-       " [3, 6, 1, 2, 4, 5, 0]]"
+       "[0, 2, 4, 1, 7, 6, 5, 3]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dp"
+    "A"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "3e2cc25d-8b02-49df-8693-d3a74224aa9f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "094e23be-9922-40e9-a895-d3b6334711ee",
    "metadata": {},
    "outputs": [],
    "source": []
