--- a/DP/EditDistance.ipynb
+++ b/DP/EditDistance.ipynb
@@ -15,7 +15,7 @@
    "id": "c98e8416-f616-4df8-b0d4-e3eef59fe209",
    "metadata": {},
    "source": [
-    "ある文字列 S に対して「1文字の追加・削除・置換」を何回繰り返せば他の文字列 T になるか。"
+    "ある文字列 $S$ に対して「1文字の追加・削除・置換」を何回繰り返せば他の文字列 $T$ になるか。"
    ]
   },
   {
@@ -27,7 +27,7 @@
    },
    "source": [
     "## 計算量\n",
-    "O(NM)"
+    "$O(NM)$"
    ]
   },
   {
@@ -38,9 +38,9 @@
    },
    "source": [
     "## 実装\n",
-    "- 1文字の追加：dp[i-1][j] + 1\n",
-    "- 1文字の削除：dp[i][j-1] + 1\n",
-    "- 1文字の置換：dp[i-1][j-1] + cost (cost=0 if s1[i - 1]==s2[j - 1] else 1)"
+    "- 1文字の追加：$dp[i-1][j] + 1$\n",
+    "- 1文字の削除：$dp[i][j-1] + 1$\n",
+    "- 1文字の置換：$dp[i-1][j-1] + cost$ ($cost=0$ if $s1[i-1]=s2[j-1]$ else 1)"
    ]
   },
   {
@@ -89,10 +89,10 @@
    "id": "f18ece8e-b742-4bbf-b52e-2da5856a0e9b",
    "metadata": {},
    "source": [
-    "文字列 S に対して以下の 3 種類の操作を行う場合、最小何回の操作で文字列 S を T に一致させることができるか。\n",
-    "- 操作1：S 中の文字を 1 つ選び、削除する。\n",
-    "- 操作2：S 中の文字を 1 つ選び、別の文字に変更する。\n",
-    "- 操作3：S 中の適当な位置に、文字を 1 つ挿入する。"
+    "文字列 $S$ に対して以下の 3 種類の操作を行う場合、最小何回の操作で文字列 $S$ を $T$ に一致させることができるか。\n",
+    "- 操作1：$S$ 中の文字を 1 つ選び、削除する。\n",
+    "- 操作2：$S$ 中の文字を 1 つ選び、別の文字に変更する。\n",
+    "- 操作3：$S$ 中の適当な位置に、文字を 1 つ挿入する。"
    ]
   },
   {
