--- a/DP/EditDistance.ipynb
+++ b/DP/EditDistance.ipynb
@@ -40,7 +40,7 @@
     "## 実装\n",
     "- 1文字の追加：$dp[i-1][j] + 1$\n",
     "- 1文字の削除：$dp[i][j-1] + 1$\n",
-    "- 1文字の置換：$dp[i-1][j-1] + cost$ ($cost=0$ if $s1[i-1]=s2[j-1]$ else 1)"
+    "- 1文字の置換：$dp[i-1][j-1] + cost$ $(cost=0 \\ if \\ s1[i-1]=s2[j-1] \\ else \\ 1)$"
    ]
   },
   {
