--- a/DP/LongestCommonSubsequence.ipynb
+++ b/DP/LongestCommonSubsequence.ipynb
@@ -15,7 +15,7 @@
    "id": "c98e8416-f616-4df8-b0d4-e3eef59fe209",
    "metadata": {},
    "source": [
-    "2つの文字列 S[1,...,m] , T[1,…,n] において、双方に現れる部分文字列の中で最長の文字列。"
+    "2つの文字列 $S[1,...,m]$ , $T[1,…,n]$ において、双方に現れる部分文字列の中で最長の文字列。"
    ]
   },
   {
@@ -27,7 +27,7 @@
    },
    "source": [
     "## 計算量\n",
-    "O(NM)"
+    "$O(NM)$"
    ]
   },
   {
@@ -38,14 +38,14 @@
    },
    "source": [
     "## 実装\n",
-    "- S[i]=T[j] の時は解にその文字を追加し、 i-1→i, j-1→j から遷移\n",
-    "- それ以外は max(dp[i-1][j], dp[i][j-1]) から遷移\n",
+    "- $S[i]=T[j]$ の時は解にその文字を追加し、 $i-1→i$, $j-1→j$ から遷移\n",
+    "- それ以外は $max(dp[i-1][j], dp[i][j-1])$ から遷移\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "44d389c5-2299-47d2-8437-8ba074b378c5",
    "metadata": {},
    "outputs": [],
@@ -98,12 +98,12 @@
    "id": "f18ece8e-b742-4bbf-b52e-2da5856a0e9b",
    "metadata": {},
    "source": [
-    "文字列 S と T の共通部分列（S の部分列かつ T の部分列）のうち、最長のものは何文字かを出力する。"
+    "文字列 $S$ と $T$ の共通部分列（$S$ の部分列かつ $T$ の部分列）のうち、最長のものは何文字かを出力する。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "56c0771e-738f-467d-a039-15ed5ce84aa9",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "3"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
