--- a/DP/LongestIncreasingSubsequence.ipynb
+++ b/DP/LongestIncreasingSubsequence.ipynb
@@ -13,7 +13,7 @@
    "id": "1167e69d-5724-429c-9928-32c23f2f1140",
    "metadata": {},
    "source": [
-    "数列の部分列のうち、すべての i < j で a[i] < a[j] となっている部分列を増加部分列という。そのうち最長のものを最長増加部分列という。"
+    "数列の部分列のうち、すべての $i < j$ で $a[i] < a[j]$ となっている部分列を増加部分列という。そのうち最長のものを最長増加部分列という。"
    ]
   },
   {
@@ -25,7 +25,7 @@
    },
    "source": [
     "## 計算量\n",
-    "O(NlogN)"
+    "$O(NlogN)$"
    ]
   },
   {
@@ -36,8 +36,8 @@
    },
    "source": [
     "## 実装\n",
-    "- L[x]: 長さ x の増加部分列の中で、右端となる要素の最小値\n",
-    "- dp[i]: L[pos] < A[i] を満たす pos の最大値を二分探索、dp[i]=pos+1"
+    "- $L[x]$: 長さ $x$ の増加部分列の中で、右端となる要素の最小値\n",
+    "- $dp[i]$: $L[pos] \\lt A[i]$ を満たす $pos$ の最大値を二分探索、$dp[i]=pos+1$"
    ]
   },
   {
@@ -90,7 +90,7 @@
    "id": "f18ece8e-b742-4bbf-b52e-2da5856a0e9b",
    "metadata": {},
    "source": [
-    "配列 A の最長増加部分列の長さを求める。"
+    "配列 $A$ の最長増加部分列の長さを求める。"
    ]
   },
   {
