--- a/Graph/BreadthFirstSearch.ipynb
+++ b/Graph/BreadthFirstSearch.ipynb
@@ -171,6 +171,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f29df49-aef1-4270-93c6-f7a49dcf4416",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "04024365-057b-4228-93de-a443179cf9f8",
    "metadata": {
@@ -272,9 +280,75 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "5dd2a2fe-fe7f-4104-b7f7-39533d05bd33",
+   "metadata": {},
+   "source": [
+    "## [使用例 3](https://atcoder.jp/contests/abc277/tasks/abc277_c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c64397c-8d8d-4a8b-92d4-dccad659c1d9",
+   "metadata": {},
+   "source": [
+    "はしごで移動できる最大の位置を求める。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c133d4ee-d976-4f71-97c2-0e5b2ab2908c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "900000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict, deque\n",
+    "\n",
+    "N = 6\n",
+    "E=[[1, 3], [1, 5], [1, 12], [3, 700000000], [3, 12], [5, 900000000]]\n",
+    "\n",
+    "# 隣接リストの値をそのまま頂点数とする場合、値によっては頂点数が多すぎる\n",
+    "# 連想配列にすることで、頂点数が多くてもTLEしない\n",
+    "graph = defaultdict(list)\n",
+    "for a,b in E:\n",
+    "    graph[a].append(b)\n",
+    "    graph[b].append(a)\n",
+    "    \n",
+    "# キューを初期化\n",
+    "que = deque()\n",
+    "que.append(1)\n",
+    "S = {1}\n",
+    "while que:\n",
+    "    # キューから探索用の頂点を取り出す\n",
+    "    pos = que.popleft()\n",
+    "    for nex in graph[pos]:\n",
+    "        # 未探索なら探索用のキューに入れる\n",
+    "        if not nex in S:\n",
+    "            que.append(nex)\n",
+    "            S.add(nex)\n",
+    "print(max(S))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8874913d-0e58-4e89-a37e-7b37edb0ce22",
+   "id": "b002572b-b882-45e8-b6b1-dddbb2c289f3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2deaaf1-9dd0-4a04-9bb7-1ea1494a90b4",
    "metadata": {},
    "outputs": [],
    "source": []
