--- a/python_memo.ipynb
+++ b/python_memo.ipynb
@@ -10,6 +10,60 @@
   },
   {
    "cell_type": "markdown",
+   "id": "10732be0-4754-48c7-80fa-3fcad9c2093f",
+   "metadata": {},
+   "source": [
+    "存在判定"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6935aebd-f415-4fc2-946b-5c19928f1ff0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# リスト\n",
+    "A = [1,2,3,4,5]\n",
+    "print(3 in A) # 3 が A に存在するか\n",
+    "print(0 in A) # 0 が A に存在するか\n",
+    "print(0 not in A) # 0 が A に存在しないか"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3affb394-419a-4c5d-b1c5-2d353f77eea2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 文字列\n",
+    "S = \"ABCDEFG\"\n",
+    "print(\"C\" in S) # \"C\" が S に存在するか\n",
+    "print(\"J\" in S) # \"J\" が S に存在するか"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2dd7da15-899f-41db-a4e1-c297b7fa928f",
    "metadata": {},
    "source": [
@@ -18,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "562f9ea1-a6ab-4081-83fd-10f55540e47e",
    "metadata": {},
    "outputs": [
@@ -47,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "d1487906-673b-4de7-8e29-2728cb3b1bbc",
    "metadata": {},
    "outputs": [
@@ -69,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "4604816f-63e2-463c-9724-ff1f6d82dc24",
    "metadata": {},
    "outputs": [
@@ -94,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "02b9f0d5-bd69-4c77-b755-17d617b1a024",
    "metadata": {},
    "outputs": [
@@ -140,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "1ba34a95-e71a-42c7-b4bc-bf86acf97949",
    "metadata": {},
    "outputs": [
@@ -179,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "820a1f07-cd2f-491b-b0be-9be48e93bc72",
    "metadata": {},
    "outputs": [
@@ -203,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "b5f476c2-efbd-4a5c-b01e-e3d4da0d6c0e",
    "metadata": {},
    "outputs": [
@@ -223,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "d4402e94-ed84-4381-81bd-d6873381a05d",
    "metadata": {},
    "outputs": [
@@ -249,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "725bcb0d-3a77-47b7-b87f-b236ca791a3d",
    "metadata": {},
    "outputs": [
@@ -271,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "f6a0f560-b48e-4ad9-9beb-b0bcf02157a0",
    "metadata": {},
    "outputs": [
