--- a/python_memo.ipynb
+++ b/python_memo.ipynb
@@ -3,9 +3,74 @@
   {
    "cell_type": "markdown",
    "id": "51fcf2b8-f4f9-4b47-b8a0-1f64ca570946",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Python メモ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "158e958d-ba31-4ce6-9df3-e30ae9087bad",
+   "metadata": {},
+   "source": [
+    "組み合わせ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9b31d6f9-f81f-44ef-b747-72dd60a97ada",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(3, 4), (3, 5), (3, 6), (4, 5), (4, 6), (5, 6)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from itertools import combinations\n",
+    "\n",
+    "# リスト\n",
+    "A = [3,4,5,6]\n",
+    "list(combinations(A,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6d8b7031-483b-47a6-b000-b8d1cd3b48c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 1, 2),\n",
+       " (0, 1, 3),\n",
+       " (0, 1, 4),\n",
+       " (0, 2, 3),\n",
+       " (0, 2, 4),\n",
+       " (0, 3, 4),\n",
+       " (1, 2, 3),\n",
+       " (1, 2, 4),\n",
+       " (1, 3, 4),\n",
+       " (2, 3, 4)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(combinations(range(5),3))"
    ]
   },
   {
@@ -58,8 +123,8 @@
    "source": [
     "# 文字列\n",
     "S = \"ABCDEFG\"\n",
-    "print(\"C\" in S) # \"C\" が S に存在するか\n",
-    "print(\"J\" in S) # \"J\" が S に存在するか"
+    "print(\"CD\" in S) # \"CD\" が S に存在するか\n",
+    "print(\"ABD\" in S) # \"ABD\" が S に存在するか"
    ]
   },
   {
@@ -183,6 +248,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9361ba4c-9d45-4221-bfc6-435ed88ea4ac",
+   "metadata": {},
+   "source": [
+    "リストの要素とインデックスを取得"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "799e82c3-5ffd-4bf6-82ff-4d1bfb5bfcf9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 8\n",
+      "1 2\n",
+      "2 3\n",
+      "3 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "H = [8,2,3,4]\n",
+    "for i, h in enumerate(H):\n",
+    "    print(i, h)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ba5f7f69-b3fa-42ac-ba63-1ad700d55dbe",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
@@ -194,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "1ba34a95-e71a-42c7-b4bc-bf86acf97949",
    "metadata": {},
    "outputs": [
@@ -233,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "820a1f07-cd2f-491b-b0be-9be48e93bc72",
    "metadata": {},
    "outputs": [
@@ -257,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "b5f476c2-efbd-4a5c-b01e-e3d4da0d6c0e",
    "metadata": {},
    "outputs": [
@@ -277,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "d4402e94-ed84-4381-81bd-d6873381a05d",
    "metadata": {},
    "outputs": [
@@ -303,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "725bcb0d-3a77-47b7-b87f-b236ca791a3d",
    "metadata": {},
    "outputs": [
@@ -325,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "f6a0f560-b48e-4ad9-9beb-b0bcf02157a0",
    "metadata": {},
    "outputs": [
